add internal/mailer package for smtp, add email confirmation on register. add endpoints confirm-email/forgot-password/reset-password. wired changes with frontend.
